--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="movies">
             <!-- Agrega más películas aquí -->
             <div class="movie" data-src="http://ia802200.us.archive.org/26/items/Peliculas-wii/Cuentos%20de%20Terramar.mp4">
-                <img src="https://via.placeholder.com/200x300" alt="Película 1">
+                <img src="https://pics.filmaffinity.com/gedo_senki_aka_tales_from_earthsea_aka-289676671-large.jpg" alt="Película 1">
                 <div class="movie-title">Cuentos de Terramar</div>
             </div>
             <div class="movie" data-src="http://ia802200.us.archive.org/26/items/Peliculas-wii/Nausicaa%20del%20Valle%20del%20Viento.mp4">
